ingress-nginx/09-canary/canary-master-echo-example-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-echo-with-canary-master
spec:
  rules:
  - host: canary.echo.example 
    http:
      paths:
      - path: /
        backend:
          serviceName: echo
          servicePort: 80
